--- a/PlanOfWork.rmd
+++ b/PlanOfWork.rmd
@@ -8,6 +8,18 @@ Gantt chart.
 
 Stsacked bar chart to show the overall distribution of time uses and how that has changed over time. Looking at generations.
 
+Splitting work:
+
++ Someone who wants to do graphics
++ Analysis of graphics
++ Discussing how decisions were made
++ Different types of analysis
+	+ PCA
+	+ Graphical
+	+ Etc.
++ Who will build the document and put the pieces together
++ Presentation should be put together as a group to divide up speaking parts
+
 # Plan
 
 + Splitting tasks
@@ -19,3 +31,4 @@ Stsacked bar chart to show the overall distribution of time uses and how that ha
 	+ Further analysis once the variables have been chosen, also the decision on how many variables etc.
 	+ Writing the document
 	+ Risks, risk allowance and proof reading of documents and other tasks to polish
++ Presentation, which speaking parts and summarising the analysis and work we have done
