--- a/Project Plan/ST344 Group July Project Plan.Rmd
+++ b/Project Plan/ST344 Group July Project Plan.Rmd
@@ -1,25 +1,26 @@
 ---
 title: "ST334 Group July Project Plan"
 author: "Group July"
-date: "27 October 2018"
 output: pdf_document
-geometry: left=2cm, right=2cm, top=2cm, bottom=2cm
+geometry: left=1cm, right=1cm, top=0.5cm, bottom=1cm
 urlcolor: blue
 fig_caption: yes
+fontsize: 9pt
 ---
 
-# The Task
+## The Task
 
-"To explore the ATUS data and provide a report that will inform the newspaper’s journalists, about some of the main changes that have occurred in relation to how people spend their time — if indeed there do appear to be any such changes"
+The American Time Use Survey (ATUS) is a study run continuously by the US Bureau of Labour Statistics for the past 15 years, asking respondants to answer how they spent their time on the previous day. Our task is to explore the ATUS data and provide a report that will inform a US newspaper’s journalists, about some of the main changes that have occurred in relation to how people spend their time — if indeed there do appear to be any such changes.
 
-# Deliverables
+## Schedule and Methodology
 
 ### Gannt Chart of Group July's Project Schedule:
 ![Gantt Chart of Group July's Project Schedule](gantt.png)
 *\*  subject to review weekly*  
 
-#Methodology
+The nature of this project means that exploratory data analysis is vital. Therefore, at the planning stage we cannot know exactly how and what we will be analysing in the dataset. For this reason we will be following a variation of the agile project management methodology. This will allow us to be flexible in our approach, performing exploratory analysis in stages to ensure we are able to provide the most rigorous and interesting conclusions. Furthermore, hourly meetings are scheduled every Wednesday for the entirety, with additional meeetings scheduled Monday 26th November and Monday 3rd December to ensure we are on track to complete the deliverables. Part of this meeting will be a review of what has happened since the previous meeting, allowing us to monitor progress and reassess our plan, whilst the rest will be an outlook on the coming week and tasks. Additionally, to enable us to work collaboratively, all work will be uploaded to GitHub group. This permits us to see where each group member is and mitigates the risk that members of the team perform the same task twice. 
 
-The nature of this project means that exploratory data analysis is vital. Therefore, at the planning stage we cannot know exactly how and what we will be analysing in the dataset. For this reason we will be following a variation of the agile project management methodology. This will allow us to be flexible in our approach, performing exploratory analysis in stages to ensure we are able to provide the most rigorous and interesting conclusions. This will include us meeting weekly to monitor progress and review our plan.
+## Risks
 
-#Risks
+The major risk to this project are that there are unforeseen delays in the exploratory data analysis. This is the most vital part of our project as our deeper data analysis cannot begin until we have identified the relationship(s) that we want to investigate further. To this end, we have added in time buffers and contingencies such that the work will be completed. Another major risk is that one of our team members falls ill unexpectedly. To avoid this being an issue, the workplan was developed such that there is a balanced load on each member and our GitHub strategy means that their work can be obtained by any other team member. 
+
