Update ST344 Group July Project Plan.Rmd

--- a/Project Plan/ST344 Group July Project Plan.Rmd
+++ b/Project Plan/ST344 Group July Project Plan.Rmd
@@ -18,9 +18,13 @@ The American Time Use Survey (ATUS) is a study run continuously by the US Bureau
 ![Gantt Chart of Group July's Project Schedule](gantt.png)
 *\*  subject to review weekly*  
 
-The nature of this project means that exploratory data analysis is vital. Therefore, at the planning stage we cannot know exactly how and what we will be analysing in the dataset. For this reason we will be following a variation of the agile project management methodology. This will allow us to be flexible in our approach, performing exploratory analysis in stages to ensure we are able to provide the most rigorous and interesting conclusions. Furthermore, hourly meetings are scheduled every Wednesday for the entirety, with additional meeetings scheduled Monday 26th November and Monday 3rd December to ensure we are on track to complete the deliverables. Part of this meeting will be a review of what has happened since the previous meeting, allowing us to monitor progress and reassess our plan, whilst the rest will be an outlook on the coming week and tasks. Additionally, to enable us to work collaboratively, all work will be uploaded to GitHub group. This permits us to see where each group member is and mitigates the risk that members of the team perform the same task twice. 
+The nature of this project means that exploratory data analysis is vital. Therefore, at the planning stage we cannot know exactly how and what we will be analysing in the dataset. For this reason we will be following a variation of the agile project management methodology. This will allow us to be flexible in our approach, performing exploratory analysis in stages to ensure we are able to provide the most rigorous and interesting conclusions. Furthermore, hourly meetings are scheduled every Wednesday for the entirety, with additional meeetings scheduled Monday 26th November and Monday 3rd December to ensure we are on track to complete the deliverables. Part of this meeting will be a review of what has happened since the previous meeting, allowing us to monitor progress and reassess our plan, whilst the rest will be an outlook on the coming week and tasks. Additionally, to enable us to work collaboratively, all work will be uploaded to GitHub group. 
+
+This permits us to see where each group member is and mitigates the risk that members of the team perform the same task twice.（maybe this last sentence could be moved to the risks part?)
 
 ## Risks
 
-The major risk to this project are that there are unforeseen delays in the exploratory data analysis. This is the most vital part of our project as our deeper data analysis cannot begin until we have identified the relationship(s) that we want to investigate further. To this end, we have added in time buffers and contingencies such that the work will be completed. Another major risk is that one of our team members falls ill unexpectedly. To avoid this being an issue, the workplan was developed such that there is a balanced load on each member and our GitHub strategy means that their work can be obtained by any other team member. 
+The major risk to this project are that there are unforeseen delays in the exploratory data analysis. This is the most vital part of our project as our deeper data analysis cannot begin until we have identified the relationship(s) that we want to investigate further. To this end, we have added in time buffers and contingencies such that the work will be completed. (Our strategy is to upload all the works to Github with proper specified names to allow everyone checking/tracking the processes easily. So repeating but redundant works can be avoided in the following parts, which would improve the efficiency and provide more time to deeper analysis.)
+
+Another major risk is that one of our team members falls ill unexpectedly. To avoid this being an issue, the workplan was developed such that there is a balanced load on each member and our GitHub strategy means that their work can be obtained by any other team member. (If necessary, we could rearrange the meeting dates.)
 
