--- a/Project Plan/ST344 Group July Project Plan.Rmd
+++ b/Project Plan/ST344 Group July Project Plan.Rmd
@@ -20,12 +20,12 @@ The American Time Use Survey (ATUS) is a study run continuously by the US Bureau
 
 The nature of this project means that exploratory data analysis is vital. Therefore, at the planning stage it is impossible to know exactly how and what the dataset would be analysed. For this reason, it would lead to a variation of the agile project management methodology. This will allow more flexiblility in the approach, performing exploratory analysis in stages to ensure it is able to provide the most rigorous and interesting conclusions.
 
-Hourly meetings are scheduled every Wednesday for the entirety, with additional scheduled for Monday 26th November and Monday 3rd December to ensure the deliverables. We will review progress over the previous week and outlook on the coming week.
+Hourly meetings are scheduled every Wednesday for the entirety, with additional scheduled for Monday 26th November and Monday 3rd December to ensure the completeness of deliverables, for instance the progresses over the previous week can be recorded clear and outlook on the coming week could be made better.
 
 ## Risks
 
-The major risk to this project are that there are unforeseen delays in the exploratory data analysis. This is the most vital part of our project as our deeper data analysis cannot begin until we have identified the relationship(s) that we want to investigate further. To this end, we have added in time buffers and contingencies such that the work will be completed.
+The major risk to this project are that there are unforeseen delays in the exploratory data analysis. This is the most vital part of the project as the deeper data analysis cannot begin until get the identified relationship(s) that could be investigated further. To this end, time buffers and contingencies are added such that the work will be completed.
 
-Another major risk is that one of our team members falls ill unexpectedly. To avoid this being an issue, the workplan was developed such that there is a balanced load on each member and our GitHub strategy means that their work can be obtained by any other team member. (If necessary, we could rearrange the meeting dates.)
+Another major risk is that one of the team members falls ill unexpectedly. To avoid this being an issue, the workplan was developed such that there is a balanced load on each member and the GitHub strategy means that all work can be obtained by any others. (If necessary, we could rearrange the meeting dates.)
 
 As with any group project, there is always the risk of a lack of communication causing a task to be done twice; unnecessarily. Our use of GitHub's project management tools (including repositories and Kanban board) will allow us to mitigate these mistakes and enable collaboration.
