--- a/Project Plan/ST344 Group July Project Plan.Rmd
+++ b/Project Plan/ST344 Group July Project Plan.Rmd
@@ -4,28 +4,25 @@ author: "Group July"
 output: pdf_document
 geometry: left=1cm, right=1cm, top=0.5cm, bottom=0.5cm
 urlcolor: blue
-fig_caption: yes
 fontsize: 9pt
 ---
 
 ## The Task
 
-The American Time Use Survey (ATUS) is a study run continuously by the US Bureau of Labour Statistics for the past 15 years, asking respondents how they spent their time on the previous day. Our task is to explore the ATUS data and provide a report that will inform a US newspaper’s journalists, about some of the main changes that have occurred in relation to how people spend their time — if indeed there do appear to be any such changes. The project is finalised with a presentation of our findings.
+The American Time Use Survey (ATUS) is a study run continuously by the US Bureau of Labour Statistics for the past 15 years, asking respondents how they spent their time on the previous day. The given task is to explore the ATUS data and provide a report that will inform a US newspaper’s journalists about some of the main changes that have occurred in how people spend their time. The project is to be concluded with a presentation of the findings and summaries of undertaken analysis.
 
 ## Schedule and Methodology
 
-### Gannt Chart of Group July's Project Schedule:
-![Gantt Chart of Group July's Project Schedule](gantt.png)
-*\*  subject to review at weekly meetings*  
+![](gantt.png)
 
-The nature of this project means that exploratory data analysis is vital. Therefore, at the planning stage we cannot know exactly how and what we will be analysing in the dataset. For this reason we will be following a variation of the agile project management methodology. This will allow us to be flexible in our approach, performing exploratory analysis in stages to ensure we are able to provide the most rigorous and interesting conclusions.
+\begin{center} \textbf{Figure 1: Gantt Chart of Group July's Project Schedule \textit{(subject to review at meetings)}} \end{center}
 
-Hourly meetings are scheduled every Wednesday for the entirety, with additional scheduled for Monday 26th November and Monday 3rd December to ensure we are on track to complete the deliverables. We will review progress over the previous week and outlook on the coming week.
+The nature of this project means that exploratory data analysis is vital: deeper data analysis cannot begin until the relationship(s) for further investigation have been identified. For this reason a variation of the agile project management methodology will be followed. This will allow for a flexible approach, performing exploratory analysis in stages to ensure the most rigorous and interesting conclusions are reached. Hourly meetings are scheduled every Wednesday (marked in grey on the Gantt chart) for the duration, with additional scheduled towards the end to ensure deliverables are on track for completion. Progress reports and outlooks will also comprise part of these meetings.
 
 ## Risks
 
-The major risk to this project are that there are unforeseen delays in the exploratory data analysis. This is the most vital part of our project as our deeper data analysis cannot begin until we have identified the relationship(s) that we want to investigate further. To this end, we have added in time buffers and contingencies such that the work will be completed.
+The major risks to this project are the occurrence of unforeseen delays in the exploratory data analysis for the reasons alluded to above. To mitigate this, time buffers and contingencies have been incorporated such that all tasks will be completed promptly.
 
-Another major risk is that one of our team members falls ill unexpectedly. To avoid this being an issue, the workplan was developed such that there is a balanced load on each member and our GitHub strategy means that their work can be obtained by any other team member. (If necessary, we could rearrange the meeting dates.)
+Another major risk is that one of the team members falls ill unexpectedly. To avoid this being an issue, the work-plan was developed such that there is a balanced load on each member and utilising GitHub means that a team member's contributions can be accessed by the whole team at any time with minimal delay. Furthermore, it will be possible to rearrange meetings - if deemed necessary.
 
-As with any group project, there is always the risk of a lack of communication causing a task to be done twice; unnecessarily. Our use of GitHub's project management tools (including repositories and Kanban board) will allow us to mitigate these mistakes and enable collaboration.
+As with any group project, there is a risk that lack of communication could cause a task to be repeated unnecessarily. The use of GitHub's project management tools (including repositories and Kanban board) will allow these errors to be mitigated and enable collaboration.
