--- a/Final Report/Technical-Appendix.rmd
+++ b/Final Report/Technical-Appendix.rmd
@@ -17,28 +17,25 @@ library(splines)
 
 ```{r}
 # Import ATUS Summary file
-ATUS.SUM <- import('atussum_0317.csv', setclass = "tibble")
+ATUS.SUM <- import('atussum_0317.dat', setclass = "tibble")
 # Import ATUS CPS File
-ATUS.CPS <- import('atuscps_0317.csv', setclass = "tibble")
-# Remove the month of July from the summary file data to be left as a confirmatory month
+ATUS.CPS <- import('atuscps_0317.dat', setclass = "tibble")
+# Add months as a column as a derivative of the TUCASEID variable
 ATUS.SUM$month <- as.numeric(substr(ATUS.SUM$TUCASEID, 5, 6))
-ATUS.SUM.Filtered <- filter(ATUS.SUM, month != 07)
-# Remove the even year for further confirmatory analysis
-ATUS.SUM.Filtered <- filter(ATUS.SUM.Filtered, month%%2 == 0)
-# Filter CPS down to just releavant variables. GEDSTFIPS is state, GEDIV is division and GEREG is region
+# Filter CPS down to just relevant variables. GEDSTFIPS is state, GEDIV is division and GEREG is region
 ATUS.CPS.States <- select(ATUS.CPS, TUCASEID, GESTFIPS, GEDIV, GEREG)
 # Create variables to be added to a data frame with relevant gender activities 
-Working <- ATUS.SUM.Filtered[, grep("^t05", names(ATUS.SUM.Filtered))]
-House.Maintenance <- ATUS.SUM.Filtered[, grep("^t0204", names(ATUS.SUM.Filtered))]
-Vehicle.Maintenance <- ATUS.SUM.Filtered[, grep("^t0207", names(ATUS.SUM.Filtered))]
-Housework <- ATUS.SUM.Filtered[, grep("^t0201", names(ATUS.SUM.Filtered))]
-Food.Prep <- ATUS.SUM.Filtered[, grep("^t0202", names(ATUS.SUM.Filtered))] + ATUS.SUM.Filtered$t070101 + ATUS.SUM.Filtered$t070103
-Childcare <- ATUS.SUM.Filtered[, grep("^t03", names(ATUS.SUM.Filtered))]
+Working <- ATUS.SUM[, grep("^t05", names(ATUS.SUM))]
+House.Maintenance <- ATUS.SUM[, grep("^t0204", names(ATUS.SUM))]
+Vehicle.Maintenance <- ATUS.SUM[, grep("^t0207", names(ATUS.SUM))]
+Housework <- ATUS.SUM[, grep("^t0201", names(ATUS.SUM))]
+Food.Prep <- ATUS.SUM[, grep("^t0202", names(ATUS.SUM))] + ATUS.SUM$t070101 + ATUS.SUM$t070103
+Childcare <- ATUS.SUM[, grep("^t03", names(ATUS.SUM))]
 ```
 ```{r}
 # Create a data frame from relevant variables within ATUS Summary
 # Childnum there for future use
-Gender.Roles.Data <- select(ATUS.SUM.Filtered, TUCASEID, TESEX, TEAGE, TUFNWGTP, TUYEAR, TRCHILDNUM)
+Gender.Roles.Data <- select(ATUS.SUM, TUCASEID, TESEX, TEAGE, TUFNWGTP, TUYEAR, TRCHILDNUM, month)
 # Join this dataset with the CPS states info by unique id number of particiapnt
 # Add in relevant categories
 Gender.Roles.Data$Working <- rowSums(Working)
@@ -55,26 +52,30 @@ Gender.Roles.Data$TESEX[Gender.Roles.Data$TESEX == 2] <- "F"
 ```
 
 ```{r}
-Gender.Roles.Data.Male <- filter(Gender.Roles.Data, TESEX == "M")
-Gender.Roles.Data.Female<- filter(Gender.Roles.Data, TESEX == "F")
-for (year in unique(Gender.Roles.Data$TUYEAR)) {
-  yearly.dataset <- filter(Gender.Roles.Data.Male, TUYEAR ==  year)
-  bottom.sum <- sum(yearly.dataset$TUFNWGTP)
-  top.sum <- sum(yearly.dataset$TUFNWGTP *yearly.dataset$Childcare)
-  weighted.childcare <- top.sum / bottom.sum
-  filter(Gender.Roles.Data.Male, TUYEAR == year)$weighted.childcare <- weighted.childcare
-  
-  bottom.sum <- sum(filter(Gender.Roles.Data.Female, TUYEAR == year)$TUFNWGTP)
-  top.sum <- sum(filter(Gender.Roles.Data.Female, TUYEAR == year)$TUFNWGTP * filter(Gender.Roles.Data.Female, TUYEAR == year)$Childcare)
-  weighted.childcare <- top.sum / bottom.sum
-  filter(Gender.Roles.Data.Female, TUYEAR == year)$TUFNWGTP$weighted.childcare <- weighted.childcare
+for (variable in c("Working", "House.Maintenance", "Vehicle.Maintenance", "Housework", "Food.Prep", "Childcare")) {
+	Gender.Roles.Data[,paste0('weighted.', variable)] <- 0
+	for (sex in c("M", "F")) {
+		for (year in unique(Gender.Roles.Data$TUYEAR)) {
+			for (month in unique(Gender.Roles.Data$month)) {
+				Filtered.Data <- filter(Gender.Roles.Data, TESEX == sex, TUYEAR == year, month == month)
+				bottom.sum <- sum(Filtered.Data$TUFNWGTP)
+				top.sum <- sum(Filtered.Data$TUFNWGTP * Filtered.Data[,variable])
+				weighted.values <- top.sum / bottom.sum
+
+				Gender.Roles.Data[Gender.Roles.Data$TESEX == sex & Gender.Roles.Data$TUYEAR == year & Gender.Roles.Data$month == month, paste0('weighted.', variable)] <- weighted.values
+				print(paste(sex, year, month))
+			}
+		}
+	}
 }
+Gender.Roles.Train <- filter(Gender.Roles.Data, month %% 2 == 0)
+Gender.Roles.Validate <- filter(Gender.Roles.Data, month %% 2 != 0)
 ```
 
 ```{r}
 # Start building models for the data
-n <- nrow(Gender.Roles.Data)
-model1 <- glm(Childcare ~ ns(TEAGE, knots = 20 * (1:4)), data = Gender.Roles.Data, family = quasi(link = "log", variance = "mu^2"), mustart = rep(10, n))
+n <- nrow(Gender.Roles.Train)
+model1 <- glm(weighted.Childcare ~ ns(, knots = 20 * (1:4)), data = Gender.Roles.Train, family = quasi(link = "log", variance = "mu^2"), mustart = rep(10, n))
 model2 <- update(model1, . ~ . + TESEX)
 model3 <- update(model1, . ~ -1 + TESEX + TESEX:ns(TEAGE, knots = 20*(1:4)))
 # Use same method as in lab 5 to plot them
