--- a/Final Report/Technical-Appendix.rmd
+++ b/Final Report/Technical-Appendix.rmd
@@ -17,9 +17,15 @@ library(splines)
 
 ```{r}
 # Import ATUS Summary file
-ATUS.SUM <- import('atussum_0317.dat', setclass = "tibble")
+ATUS.SUM <- import('atussum_0317.csv', setclass = "tibble")
 # Import ATUS CPS File
-ATUS.CPS <- import('atuscps_0317.dat', setclass = "tibble")
+ATUS.CPS <- import('atuscps_0317.csv', setclass = "tibble")
+# Import ATUS Respondant file
+ATUS.RES <- import('atusresp_0317.csv', setclass = "tibble")
+# Create a diary date column
+Diary.Date <- select(ATUS.RES, TUCASEID, TUDIARYDATE)
+ATUS.SUM <- left_join(ATUS.SUM, Diary.Date, by = 'TUCASEID')
+ATUS.SUM$TUDIARYDATE <- as.Date(as.character(ATUS.SUM$TUDIARYDATE), "%Y%m%d")
 # Add months as a column as a derivative of the TUCASEID variable
 ATUS.SUM$month <- as.numeric(substr(ATUS.SUM$TUCASEID, 5, 6))
 # Filter CPS down to just relevant variables. GEDSTFIPS is state, GEDIV is division and GEREG is region
@@ -63,7 +69,6 @@ for (variable in c("Working", "House.Maintenance", "Vehicle.Maintenance", "House
 				weighted.values <- top.sum / bottom.sum
 
 				Gender.Roles.Data[Gender.Roles.Data$TESEX == sex & Gender.Roles.Data$TUYEAR == year & Gender.Roles.Data$month == month, paste0('weighted.', variable)] <- weighted.values
-				print(paste(sex, year, month))
 			}
 		}
 	}
