--- a/Final Report/Technical-Appendix.rmd
+++ b/Final Report/Technical-Appendix.rmd
@@ -20,12 +20,8 @@ library(splines)
 ATUS.SUM <- import('atussum_0317.csv', setclass = "tibble")
 # Import ATUS CPS File
 ATUS.CPS <- import('atuscps_0317.csv', setclass = "tibble")
-# Import ATUS Respondant file
-ATUS.RES <- import('atusresp_0317.csv', setclass = "tibble")
 # Create a diary date column
-Diary.Date <- select(ATUS.RES, TUCASEID, TUDIARYDATE)
-ATUS.SUM <- left_join(ATUS.SUM, Diary.Date, by = 'TUCASEID')
-ATUS.SUM$TUDIARYDATE <- format(as.Date(as.character(ATUS.SUM$TUDIARYDATE), "%Y%m%d"), "%Y-%m")
+ATUS.SUM$TUDIARYDATE <- as.Date(substr(ATUS.SUM$TUCASEID, 1, 8), "%Y%m%d")
 # Add months as a column as a derivative of the TUCASEID variable
 ATUS.SUM$month <- as.numeric(substr(ATUS.SUM$TUCASEID, 5, 6))
 # Filter CPS down to just relevant variables. GEDSTFIPS is state, GEDIV is division and GEREG is region
@@ -58,7 +54,7 @@ Gender.Roles.Data$TESEX[Gender.Roles.Data$TESEX == 1] <- "M"
 Gender.Roles.Data$TESEX[Gender.Roles.Data$TESEX == 2] <- "F"
 ```
 
-```{r, cache = TRUE}
+```{r}
 for (variable in c("Working", "House.Maintenance", "Vehicle.Maintenance", "Housework", "Food.Prep", "Childcare")) {
 	Gender.Roles.Data[,paste0('weighted.', variable)] <- 0
 	for (sex in c("M", "F")) {
@@ -85,11 +81,11 @@ model1 <- glm(weighted.Childcare ~ ns(TUDIARYDATE), data = Gender.Roles.Train, f
 model2 <- update(model1, . ~ . + TESEX)
 model3 <- update(model1, . ~ -1 + TESEX + TESEX:ns(TUDIARYDATE))
 # Use same method as in lab 5 to plot them
-male.prediction.childcare <- predict.glm(model3, newdata = filter(Gender.Roles.Train, TESEX == 'M'), se = TRUE, type = "response")
+male.prediction.childcare <- predict.glm(model2, newdata = filter(Gender.Roles.Train, TESEX == 'M'), se = TRUE, type = "response")
 
-female.prediction.childcare <- predict.glm(model3, newdata = filter(Gender.Roles.Train, TESEX == 'F'), se = TRUE, type = "response")
+female.prediction.childcare <- predict.glm(model2, newdata = filter(Gender.Roles.Train, TESEX == 'F'), se = TRUE, type = "response")
 
-df <- data.frame(age = c(filter(Gender.Roles.Train, TESEX == 'M')$TEAGE, filter(Gender.Roles.Train, TESEX == 'F')$TEAGE), prediction = c(male.prediction.childcare$fit, female.prediction.childcare$fit), date = c(filter(Gender.Roles.Train, TESEX == 'M')$TUDIARYDATE, filter(Gender.Roles.Train, TESEX == 'F')$TUDIARYDATE), prediction_error = c(1.96*male.prediction.childcare$se.fit, 1.96*female.prediction.childcare$se.fit), type = c(filter(Gender.Roles.Train, TESEX == 'M')$TESEX, filter(Gender.Roles.Train, TESEX == 'F')$TESEX))
+df <- data.frame(age = c(filter(Gender.Roles.Train, TESEX == 'M')$TEAGE, filter(Gender.Roles.Train, TESEX == 'F')$TEAGE), prediction = c(male.prediction.childcare$fit, female.prediction.childcare$fit), date = c(filter(Gender.Roles.Train, TESEX == 'M')$TUDIARYDATE, filter(Gender.Roles.Train, TESEX == 'F')$TUDIARYDATE), prediction_error = c(1.96*male.prediction.childcare$se.fit, 2*female.prediction.childcare$se.fit), type = c(filter(Gender.Roles.Train, TESEX == 'M')$TESEX, filter(Gender.Roles.Train, TESEX == 'F')$TESEX))
 
 model3_plot <- ggplot(df, aes(x=date, y=prediction, colour=type)) + 
 geom_line() + 
