--- a/Final Report/Technical-Appendix.rmd
+++ b/Final Report/Technical-Appendix.rmd
@@ -75,20 +75,23 @@ Gender.Roles.Validate <- filter(Gender.Roles.Data, month %% 2 != 0)
 ```
 
 ```{r}
-# Start building models for the data
-n <- nrow(Gender.Roles.Train)
-model1 <- glm(weighted.Childcare ~ ns(TUDIARYDATE), data = Gender.Roles.Train, family = quasi(link = "log", variance = "mu^2"), mustart = rep(10, n))
-model2 <- update(model1, . ~ . + TESEX)
-model3 <- update(model1, . ~ -1 + TESEX + TESEX:ns(TUDIARYDATE))
-# Use same method as in lab 5 to plot them
-male.prediction.childcare <- predict.glm(model2, newdata = filter(Gender.Roles.Train, TESEX == 'M'), se = TRUE, type = "response")
+# glm not converging.
+for (variable in c("Working", "House.Maintenance", "Vehicle.Maintenance", "Housework", "Food.Prep", "Childcare")) {
+	# Start building models for the data
+	n <- nrow(Gender.Roles.Train)
+	model1 <- glm(as.formula(paste0('weighted.',variable,' ~ ns(TUDIARYDATE, knots = (c(as.Date("2006-01-01"), as.Date("2009-01-01"), as.Date("2012-01-01"), as.Date("2015-01-01"))))')), data = Gender.Roles.Train, family = quasi(link = "log", variance = "mu^2"), mustart = rep(10, n))
+	model2 <- update(model1, . ~ . + TESEX)
+	model3 <- update(model1, . ~ -1 + TESEX + TESEX:ns(TUDIARYDATE, knots = (c(as.Date('2006-01-01'), as.Date('2009-01-01'), as.Date('2012-01-01'), as.Date('2015-01-01')))))
+	# Use same method as in lab 5 to plot them
+	male.prediction <- predict.glm(model3, newdata = filter(Gender.Roles.Train, TESEX == 'M'), se = TRUE, type = "response")
 
-female.prediction.childcare <- predict.glm(model2, newdata = filter(Gender.Roles.Train, TESEX == 'F'), se = TRUE, type = "response")
+	female.prediction <- predict.glm(model3, newdata = filter(Gender.Roles.Train, TESEX == 'F'), se = TRUE, type = "response")
 
-df <- data.frame(age = c(filter(Gender.Roles.Train, TESEX == 'M')$TEAGE, filter(Gender.Roles.Train, TESEX == 'F')$TEAGE), prediction = c(male.prediction.childcare$fit, female.prediction.childcare$fit), date = c(filter(Gender.Roles.Train, TESEX == 'M')$TUDIARYDATE, filter(Gender.Roles.Train, TESEX == 'F')$TUDIARYDATE), prediction_error = c(1.96*male.prediction.childcare$se.fit, 2*female.prediction.childcare$se.fit), type = c(filter(Gender.Roles.Train, TESEX == 'M')$TESEX, filter(Gender.Roles.Train, TESEX == 'F')$TESEX))
+	df <- data.frame(age = c(filter(Gender.Roles.Train, TESEX == 'M')$TEAGE, filter(Gender.Roles.Train, TESEX == 'F')$TEAGE), prediction = c(male.prediction$fit, female.prediction$fit), date = c(filter(Gender.Roles.Train, TESEX == 'M')$TUDIARYDATE, filter(Gender.Roles.Train, TESEX == 'F')$TUDIARYDATE), prediction_error = c(1.96*male.prediction$se.fit, 2*female.prediction$se.fit), type = c(filter(Gender.Roles.Train, TESEX == 'M')$TESEX, filter(Gender.Roles.Train, TESEX == 'F')$TESEX))
 
-model3_plot <- ggplot(df, aes(x=date, y=prediction, colour=type)) + 
-geom_line() + 
-geom_ribbon(aes(ymin = prediction - prediction_error, ymax = prediction + prediction_error), alpha = 0.25)
-model3_plot
+	model3_plot <- ggplot(df, aes(x=date, y=prediction, colour=type)) + 
+	geom_line() + 
+	geom_ribbon(aes(ymin = prediction - prediction_error, ymax = prediction + prediction_error), alpha = 0.25)
+	model3_plot
+}
 ```
