--- a/Final Report/CK TA.Rmd
+++ b/Final Report/CK TA.Rmd
@@ -101,12 +101,12 @@ Gender.Roles.Validate <- filter(Gender.Roles.Data, TUMONTH %% 2 != 0)
 ```{r, cache=TRUE}
 # Make a variable for all years. 
 Dates <- c()
-for(i in 4:17){
-  if(i < 10){
-  Dates[i-3] <- paste(paste0("200", i), "01", "01", sep = "-")
-  } else{
-    Dates[i-3] <- paste(paste0("20", i), "01", "01", sep = "-")
-  }
+for (i in 4:17) {
+    if (i < 10) {
+        Dates[i-3] <- paste(paste0("200", i), "02", "01", sep = "-")
+    } else {
+        Dates[i-3] <- paste(paste0("20", i), "02", "01", sep = "-")
+    }
 }
 # Commented out lines show how to introduce knots to the models
 for (variable in c("Working", "House.Maintenance", "Vehicle.Maintenance", "Housework", "Food.Prep", "Childcare")) {
@@ -136,12 +136,12 @@ Validate the data
 
 ```{r, cache=TRUE}
 Dates <- c()
-for(i in 4:17){
-  if(i < 10){
-  Dates[i-3] <- paste(paste0("200", i), "02", "01", sep = "-")
-  } else{
-    Dates[i-3] <- paste(paste0("20", i), "02", "01", sep = "-")
-  }
+for (i in 4:17) {
+    if (i < 10) {
+        Dates[i-3] <- paste(paste0("200", i), "02", "01", sep = "-")
+    } else {
+        Dates[i-3] <- paste(paste0("20", i), "02", "01", sep = "-")
+    }
 }
 for (variable in c("Working", "House.Maintenance", "Vehicle.Maintenance", "Housework", "Food.Prep", "Childcare")) {
 	# Start building models for the data
@@ -156,8 +156,8 @@ for (variable in c("Working", "House.Maintenance", "Vehicle.Maintenance", "House
 	# model5 <- update(model3, .~. + GEREG + GEREG:ns(TUDIARYDATE, knots = c(as.Date(Dates))))
 	# Use same method as in lab 5 to plot them
 	# change the model number in the predict functions below for different models
-	male.prediction <- predict.glm(model5, newdata = filter(Gender.Roles.Validate, TESEX == 'M'), se = TRUE, type = "response")
-	female.prediction <- predict.glm(model5, newdata = filter(Gender.Roles.Validate, TESEX == 'F'), se = TRUE, type = "response")
+	male.prediction <- predict.glm(model5.Validate, newdata = filter(Gender.Roles.Validate, TESEX == 'M'), se = TRUE, type = "response")
+	female.prediction <- predict.glm(model5.Validate, newdata = filter(Gender.Roles.Validate, TESEX == 'F'), se = TRUE, type = "response")
 	df <- data.frame(age = c(filter(Gender.Roles.Validate, TESEX == 'M')$TEAGE, filter(Gender.Roles.Validate, TESEX == 'F')$TEAGE), prediction = c(male.prediction$fit, female.prediction$fit), date = c(filter(Gender.Roles.Validate, TESEX == 'M')$TUDIARYDATE, filter(Gender.Roles.Validate, TESEX == 'F')$TUDIARYDATE), prediction_error = c(1.96*male.prediction$se.fit, 2*female.prediction$se.fit), type = c(filter(Gender.Roles.Validate, TESEX == 'M')$TESEX, filter(Gender.Roles.Validate, TESEX == 'F')$TESEX), region = c(filter(Gender.Roles.Validate, TESEX == 'M')$GEREG, filter(Gender.Roles.Validate, TESEX == 'F')$GEREG), generation = c(filter(Gender.Roles.Validate, TESEX == "M")$TUGENERATION, filter(Gender.Roles.Validate, TESEX == "F")$TUGENERATION))
 	model3_plot <- ggplot(df, aes(x=date, y=prediction, colour=type)) + 
 	geom_line() + 
